# doc-to-md-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/doc_to_md_cli/: __init__.py  __main__.py  cli.py  converter.py  discover.py
tests/: test_cli.py  test_discover.py
